--- a/mt7621_xiaomi_mir3g-v2.dts
+++ b/mt7621_xiaomi_mir3g-v2.dts
@@ -8,7 +8,7 @@
 
 / {
 	compatible = "xiaomi,mir3g-v2", "mediatek,mt7621-soc";
-	model = "Xiaomi Mi Router 3G v2";
+	model = "星新课代表制作出品";
 
 	aliases {
 		led-boot = &led_status_yellow;
