--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -19,7 +19,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: 0 */8 * * *
-
+    - cron: 0 */18 * * *
+    
 jobs:
   check:
     runs-on: ubuntu-latest
