--- a/.github/workflows/xiaomi-mini.yml
+++ b/.github/workflows/xiaomi-mini.yml
@@ -25,7 +25,7 @@ env:
   FEEDS_CONF: MINI.conf.default
   CONFIG_FILE: mini.config
   DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  DIY_P2_SH: mini.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
