--- a/.github/workflows/xiaomi-mini.yml
+++ b/.github/workflows/xiaomi-mini.yml
@@ -84,7 +84,11 @@ jobs:
 
     - name: Mv favicon.ico
       run: |
-        mv favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico  
+        mv /mini/favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico
+        mv /mini/logo.png openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/logo.png
+        mv /mini/bg1.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg1.jpg
+        mv /mini/bg2.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg2.jpg
+        mv /mini/bg3.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg3.jpg
         mv banner openwrt/package/base-files/files/etc/banner
         
     - name: SSH connection to Actions
