--- a/R4A.config
+++ b/R4A.config
@@ -1,10 +1,8 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mir3g-v2=y
-CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_adbyby=y
-# CONFIG_PACKAGE_etherwake is not set
+CONFIG_PACKAGE_etherwake=m
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
@@ -12,59 +10,47 @@ CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-sit=y
-CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libsodium=y
-# CONFIG_PACKAGE_libuuid is not set
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
-# CONFIG_PACKAGE_luci-app-arpbind is not set
-# CONFIG_PACKAGE_luci-app-autoreboot is not set
-# CONFIG_PACKAGE_luci-app-ddns is not set
-# CONFIG_PACKAGE_luci-app-filetransfer is not set
-CONFIG_PACKAGE_luci-app-privoxy=y
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+CONFIG_PACKAGE_libcap=m
+CONFIG_PACKAGE_libuuid=m
+CONFIG_PACKAGE_libuv=m
+CONFIG_PACKAGE_libwebsockets-full=m
+CONFIG_PACKAGE_luci-app-arpbind=m
+CONFIG_PACKAGE_luci-app-autoreboot=m
+CONFIG_PACKAGE_luci-app-ddns=m
+CONFIG_PACKAGE_luci-app-privoxy=m
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-# CONFIG_PACKAGE_luci-app-unblockmusic is not set
-# CONFIG_PACKAGE_luci-app-upnp is not set
-# CONFIG_PACKAGE_luci-app-vlmcsd is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ChinaDNS is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ShadowsocksR_Socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Shadowsocks_Socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_Trojan is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_V2ray is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnscrypt_proxy is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_dnsforwarder is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_ipt2socks is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_privoxy is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_simple-obfs-server is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udp2raw-tunnel is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_udpspeeder is not set
-# CONFIG_PACKAGE_luci-app-vssr-plus_INCLUDE_v2ray-plugin is not set
-CONFIG_PACKAGE_luci-app-watchcat=y
-# CONFIG_PACKAGE_luci-app-wol is not set
-CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-privoxy-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
-# CONFIG_PACKAGE_luci-lib-fs is not set
+CONFIG_PACKAGE_luci-app-ttyd=m
+CONFIG_PACKAGE_luci-app-uhttpd=m
+CONFIG_PACKAGE_luci-app-upnp=m
+CONFIG_PACKAGE_luci-app-vlmcsd=m
+CONFIG_PACKAGE_luci-app-vsftpd=m
+CONFIG_PACKAGE_luci-app-watchcat=m
+CONFIG_PACKAGE_luci-app-webadmin=m
+CONFIG_PACKAGE_luci-app-wifischedule=m
+CONFIG_PACKAGE_luci-app-wol=m
+CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-privoxy-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-wifischedule-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=m
 CONFIG_PACKAGE_luci-proto-ipv6=y
-# CONFIG_PACKAGE_miniupnpd is not set
+CONFIG_PACKAGE_miniupnpd=m
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
-CONFIG_PACKAGE_privoxy=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_simple-obfs=y
-# CONFIG_PACKAGE_vlmcsd is not set
-CONFIG_PACKAGE_watchcat=y
-# CONFIG_PACKAGE_wol is not set
-CONFIG_PACKAGE_xray-core=y
-CONFIG_XRAY_CORE_COMPRESS_UPX=y
+CONFIG_PACKAGE_privoxy=m
+CONFIG_PACKAGE_ttyd=m
+CONFIG_PACKAGE_vlmcsd=m
+CONFIG_PACKAGE_vsftpd-alt=m
+CONFIG_PACKAGE_watchcat=m
+CONFIG_PACKAGE_wifischedule=m
+CONFIG_PACKAGE_wol=m
