--- a/R4A.config
+++ b/R4A.config
@@ -47,7 +47,7 @@ CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
-CONFIG_PACKAGE_privoxy=m
+CONFIG_PACKAGE_privoxy= y
 CONFIG_PACKAGE_ttyd=m
 CONFIG_PACKAGE_vlmcsd=m
 CONFIG_PACKAGE_vsftpd-alt=m
