--- a/.github/workflows/CR660X-openwrt.yml
+++ b/.github/workflows/CR660X-openwrt.yml
@@ -22,10 +22,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
+  FEEDS_CONF: MI-CR660x/feeds.conf.default
+  CONFIG_FILE: MI-CR660x/.config
   DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  DIY_P2_SH: MI-CR660x/CR660x.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -84,8 +84,12 @@ jobs:
 
     - name: 上传 favicon.ico
       run: |
-        mv favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico  
-        mv banner openwrt/package/base-files/files/etc/banner
+        mv MI-CR660x/favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico  
+        mv MI-CR660x/logo.png openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/logo.png
+        mv MI-CR660x/bg1.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg1.jpg
+        mv MI-CR660x/bg2.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg2.jpg
+        mv MI-CR660x/bg3.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg3.jpg   
+        mv MI-CR660x/banner openwrt/package/base-files/files/etc/banner  
         
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
