--- a/.github/workflows/xiaomi-mini.yml
+++ b/.github/workflows/xiaomi-mini.yml
@@ -20,12 +20,12 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/YL2209/lede
   REPO_BRANCH: master
-  FEEDS_CONF: MINI.conf.default
-  CONFIG_FILE: mini.config
+  FEEDS_CONF: mini/MINI.conf.default
+  CONFIG_FILE: mini/mini.config
   DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: mini.sh
+  DIY_P2_SH: mini/mini.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
