--- a/.github/workflows/MI-R4A.yml
+++ b/.github/workflows/MI-R4A.yml
@@ -22,10 +22,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: R4A.conf.default
-  CONFIG_FILE: R4A.config
+  FEEDS_CONF: MI-R4A/R4A.conf.default
+  CONFIG_FILE: MI-R4A/R4A.config
   DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: R4A.sh
+  DIY_P2_SH: MI-R4A/R4A.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -64,8 +64,8 @@ jobs:
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
-        mv mt7621.mk openwrt/target/linux/ramips/image/mt7621.mk
-        mv mt7621_xiaomi_mir3g-v2.dts openwrt/target/linux/ramips/dts/mt7621_xiaomi_mir3g-v2.dts
+        mv MI-R4A/mt7621.mk openwrt/target/linux/ramips/image/mt7621.mk
+        mv MI-R4A/mt7621_xiaomi_mir3g-v2.dts openwrt/target/linux/ramips/dts/mt7621_xiaomi_mir3g-v2.dts
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
@@ -86,7 +86,7 @@ jobs:
         
     - name: Update favicon.ico
       run: |
-        mv favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico  
+        mv MI-R4A/favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico  
         mv banner openwrt/package/base-files/files/etc/banner
         
     - name: SSH connection to Actions  
