--- a/.github/workflows/MI-R4A.yml
+++ b/.github/workflows/MI-R4A.yml
@@ -87,7 +87,7 @@ jobs:
     - name: Update favicon.ico
       run: |
         mv MI-R4A/favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico  
-        mv banner openwrt/package/base-files/files/etc/banner
+        mv MI-R4A/banner openwrt/package/base-files/files/etc/banner
         
     - name: SSH connection to Actions  
       uses: P3TERX/ssh2actions@v1.0.0
