--- a/.github/workflows/CR660X-openwrt.yml
+++ b/.github/workflows/CR660X-openwrt.yml
@@ -23,7 +23,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: MI-CR660x/feeds.conf.default
-  CONFIG_FILE: MI-CR660x/.config
+  CONFIG_FILE: MI-CR660x/CR660x.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: MI-CR660x/CR660x.sh
   UPLOAD_BIN_DIR: true
