--- a/R5A.config
+++ b/R5A.config
@@ -2,60 +2,59 @@ CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mir3g-v2=y
 CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_adbyby=m
-CONFIG_PACKAGE_etherwake=m
+# CONFIG_PACKAGE_coreutils is not set
+# CONFIG_PACKAGE_dns2socks is not set
+# CONFIG_PACKAGE_etherwake is not set
+# CONFIG_PACKAGE_ip-full is not set
+CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ipset=m
+# CONFIG_PACKAGE_ipset is not set
+# CONFIG_PACKAGE_iptables-mod-tproxy is not set
 CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
+# CONFIG_PACKAGE_kmod-ipt-tproxy is not set
 CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
-CONFIG_PACKAGE_kmod-nf-ipt6=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-sit=y
+# CONFIG_PACKAGE_libbpf is not set
 CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libipset=m
-CONFIG_PACKAGE_libmnl=m
-CONFIG_PACKAGE_libuuid=m
+# CONFIG_PACKAGE_libelf is not set
+# CONFIG_PACKAGE_libev is not set
+# CONFIG_PACKAGE_libipset is not set
+# CONFIG_PACKAGE_libmnl is not set
+# CONFIG_PACKAGE_libsodium is not set
+# CONFIG_PACKAGE_libudns is not set
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_luci-app-accesscontrol=m
-CONFIG_PACKAGE_luci-app-adbyby-plus=m
-CONFIG_PACKAGE_luci-app-ddns=m
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk is not set
 CONFIG_PACKAGE_luci-app-privoxy=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
-CONFIG_PACKAGE_luci-app-upnp=m
-CONFIG_PACKAGE_luci-app-vlmcsd=m
-CONFIG_PACKAGE_luci-app-vsftpd=m
-CONFIG_PACKAGE_luci-app-webadmin=y
-CONFIG_PACKAGE_luci-app-wifischedule=y
-CONFIG_PACKAGE_luci-app-wol=m
-CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=m
+# CONFIG_PACKAGE_luci-app-vlmcsd is not set
+# CONFIG_PACKAGE_luci-app-wol is not set
 CONFIG_PACKAGE_luci-i18n-privoxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-wifischedule-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-wol-zh-cn=m
 CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_miniupnpd=m
+CONFIG_PACKAGE_luci-theme-ifit=y
+# CONFIG_PACKAGE_microsocks is not set
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_privoxy=y
+# CONFIG_PACKAGE_resolveip is not set
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-check is not set
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir is not set
+# CONFIG_PACKAGE_tcping is not set
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_vlmcsd=m
-CONFIG_PACKAGE_vsftpd-alt=m
-CONFIG_PACKAGE_wifischedule=y
-CONFIG_PACKAGE_wol=m
+# CONFIG_PACKAGE_vlmcsd is not set
+# CONFIG_PACKAGE_wol is not set
+# CONFIG_TARGET_ROOTFS_INITRAMFS is not set
