--- a/MI-R4A/R4A.config
+++ b/MI-R4A/R4A.config
@@ -1,4 +1,6 @@
-
+CONFIG_TARGET_ramips=y
+CONFIG_TARGET_ramips_mt7621=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-4a-gigabit=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_adbyby=y
 CONFIG_PACKAGE_ddns-scripts=m
