--- a/MI-CR660x/CR660x.config
+++ b/MI-CR660x/CR660x.config
@@ -1,3 +1,5 @@
+CONFIG_MODULES=y
+CONFIG_HAVE_DOT_CONFIG=y
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-cr6606=y
