--- a/.github/workflows/CR660X-openwrt.yml
+++ b/.github/workflows/CR660X-openwrt.yml
@@ -26,6 +26,7 @@ env:
   CONFIG_FILE: MI-CR660x/CR660x.config
   DIY_P1_SH: MI-CR660x/diy-part1.sh
   DIY_P2_SH: MI-CR660x/CR660x.sh
+  DIY_P3_SH: MI-CR660x/diy-part3.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
@@ -82,14 +83,10 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
-    - name: 上传 favicon.ico
+    - name: 上传 文件
       run: |
-        mv MI-CR660x/favicon.ico openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/favicon.ico  
-        mv MI-CR660x/logo.png openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/logo.png
-        mv MI-CR660x/bg1.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg1.jpg
-        mv MI-CR660x/bg2.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg2.jpg
-        mv MI-CR660x/bg3.jpg openwrt/package/lean/luci-theme-argon_armygreen/htdocs/luci-static/argon_armygreen/img/bg3.jpg   
-        mv MI-CR660x/banner openwrt/package/base-files/files/etc/banner  
+        chmod +x $DIY_P3_SH
+        $GITHUB_WORKSPACE/$DIY_P3_SH
         
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
