--- a/MI-R4A/R4A.config
+++ b/MI-R4A/R4A.config
@@ -57,3 +57,5 @@ CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
 CONFIG_PACKAGE_ttyd=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
+
+luci-theme-ifit=y
