--- a/MI-R4A/R4A.config
+++ b/MI-R4A/R4A.config
@@ -58,4 +58,5 @@ CONFIG_PACKAGE_ttyd=y
 # CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vsftpd-alt is not set
 
-luci-theme-ifit=y
+CONFIG_PACKAGE_luci-theme-argon_armygreen=y
+CONFIG_PACKAGE_luci-theme-ifit=y
