--- a/MI-CR660x/CR660x.config
+++ b/MI-CR660x/CR660x.config
@@ -85,3 +85,6 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_wifischedule=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_UnblockNeteaseMusic_Go=y
+
+CONFIG_PACKAGE_luci-theme-argon_armygreen=y
+CONFIG_PACKAGE_luci-theme-ifit=y
